--- a/css/_media.scss
+++ b/css/_media.scss
@@ -543,7 +543,15 @@
             }
         }
     }
-
+    .deal_vehicles {
+        .vehicles_info {
+            &:hover {
+                transform: scale(1);
+                transition-duration: 0s;
+            }
+        }
+      }
+    
     footer {
         .contact_address_2 {
             .cont {
