--- a/css/style.css
+++ b/css/style.css
@@ -1214,7 +1214,7 @@ section {
   .testimonials_con .customersrepeat .img_on_text .text span {
     font-size: 2rem; }
 
-  .deal_vehicles .vehicles_info:hover {
+  .vehicles .deal_vehicles .vehicles_info:hover {
     transform: scale(1);
     transition-duration: 0s; }
 
